frostwire (5.3.6) stable; urgency=high
  * Fixes issue with search results from KAT.ph. Now downloads are started
    using magnet links instead of .torrents.
  * Supports dragging files from transfer manager. 
    Useful to send files to iTunes as soon as transfers are done.
  * Adds links to Facebook and Google Plus pages.

 -- FrostWire Team <contact@frostwire.com>  Fri, 04 May 2012 21:49:00 -0500

frostwire (5.3.5) stable; urgency=high
  * Drag and drop files and folders to your Android device running FrostWire.
    You can upload files to 3 different devices at the same time.
  * Fixes glitch where the file explorer would reset the split pane position.
  * Removes flickering on album arts when resizing library explorer
  * When the FrostWire window is resized to be very small the search
    filters no longer overlap the "Open" and "Send to" buttons.
  * Search box on the Library is now on the upper left and 
    offers contextual hint.
  * Search boxes everywhere now have a clear button.
  * Playlists are now sorted alphabetically.
  * Option panes UI upgrades.
  * Better suggestion for a playlist name when a folder is dropped on
    "New Playlist".
  * German translation updated.
  * French translation updated.
  * Norwegian translation updated.
  * Dutch translation updated.
  * Japanese translation updated.
  * Filipino translation updated.
  * Chinese (Hong Kong) translation updated.
  * Chinese (Taiwan) translation updated.
  * Chinese (Mainland) translation updated.
  * Turkish translation updated.
  * Portuguese (Brazilian) updated.
  * Korean translation updated.
  * Italian translation updated.
  * Hindi translation updated.

 -- FrostWire Team <contact@frostwire.com>  Wed, 18 Apr 2012 18:00:00 -0500

frostwire (5.3.4) stable; urgency=high
  * New frostwire.exe launcher with extended Unicode support now able to
    handle .torrent file names with extended Unicode characters.
  * Windows build is Windows 8 compatible.