@@ -30,7 +30,7 @@ public final class FrostWireUtils {
 	/** 
 	 * Constant for the current version of FrostWire.
 	 */
-	private static final String FROSTWIRE_VERSION = "5.3.5";
+	private static final String FROSTWIRE_VERSION = "5.3.6";
      
 	/**
 	 * Cached constant for the HTTP Server: header value.
